Mobile First Project
This code is a re-write from createing the first code using max width as media quieries. This version uses min-width.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 	
 	<a id="top"></a>
 	
-	<div class="main-nav">
-		
-	<div class="name"><a>Dylan Guma</a></div>
-		
+	<div class="name">Dylan Guma</div>
+	
+	<div class="main-nav" id="home">
 		<nav>
 			<ul>
-				<li>HOME</li>
-				<li>PORTFOLIO</li>
-				<li>CONTACT</li>
+				<li><a href="#home">HOME</a></li>
+				<li><a href="#portfolio">PORTFOLIO</a></li>
+				<li><a href="#contact">CONTACT</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -37,7 +36,7 @@
 	
 	<main>
 		
-		<h4 class="thumbnail-section-title">PORTFOLIO</h4>
+		<h4 class="thumbnail-section-title" id="portfolio">PORTFOLIO</h4>
 		
 		<section>
 			
@@ -79,14 +78,14 @@
 			
 		</section>
 		
-		<div class="contact">
+		<div class="contact" id="contact">
 			
 			<h4>CONTACT</h4>
 			<p>If you're interested in chatting or want more information about what I've been working on, I'd love to hear from you!</p>
 			
 			<div class="contact-information">
-				<p>Phone +1 (111) 555-1234</p>
-				<p>Email email@yoursite.com</p>
+				<p>Phone &nbsp;<a href="tel:+11115551234">+1 (111) 555-1234</a></p>
+				<p>Email &nbsp;<a href="mailto:email@yoursite.com">email@yoursite.com</a></p>
 			</div>
 			
 		</div>
@@ -103,9 +102,9 @@
 		
 		<nav>
 			<ul>
-				<li>HOME</li>
-				<li>PORTFOLIO</li>
-				<li>CONTACT</li>
+				<li><a href="#home">Home</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 		
