--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 	
 	<a id="top"></a>
 	
-	<div class="name">Dylan Guma</div>
-	
-	<div class="main-nav" id="home">
-		<nav>
-			<ul>
-				<li><a href="#home">HOME</a></li>
-				<li><a href="#portfolio">PORTFOLIO</a></li>
-				<li><a href="#contact">CONTACT</a></li>
-			</ul>
-		</nav>
+	<div class="nav-container">
+		<div class="name">Dylan Guma</div>
+
+		<div class="main-nav" id="home">
+			<nav>
+				<ul>
+					<li><a href="#home">HOME</a></li>
+					<li><a href="#portfolio">PORTFOLIO</a></li>
+					<li><a href="#skills">SKILLS</a></li>
+					<li><a href="#contact">CONTACT</a></li>
+				</ul>
+			</nav>
+		</div>
 	</div>
-	
 	<header>
 		
 		<div class="main-header">
@@ -38,7 +40,7 @@
 		
 		<h4 class="thumbnail-section-title" id="portfolio">PORTFOLIO</h4>
 		
-		<section>
+		<div class="portfolio-container">
 			
 			<div class="thumbnail-section">
 				<img src="images/portfolio-1.png" alt="Picture of marketing data" class="thumbnail">
@@ -76,7 +78,12 @@
 				<p class="thumbnail-description">Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
 			</div>
 			
-		</section>
+		</div>
+		
+		<div class="skills" id="skills">
+			<h4>SKILLS &amp; HOBBIES</h4>
+			<p>Other than coding I enjoy drawing digitally, skateboarding at various locations around NYC, and I enjoy riding a motorcylce of warm sunny days.</p>
+		</div>
 		
 		<div class="contact" id="contact">
 			
@@ -89,6 +96,7 @@
 			</div>
 			
 		</div>
+		
 	
 	</main>
 	
@@ -104,6 +112,7 @@
 			<ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#skills">SKILLS</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
